# drop

./: .gitignore  README.md  compose.kafka.yaml  compose.placement.yaml  compose.staging.yaml  compose.swarm.yaml  compose.yaml  deploy.sh
.github/workflows/: ci.yaml  docs.yaml
config/logstash/pipeline/: logstash.conf
connectors/elasticsearch/: connector.py  pyproject.toml
docs/: Gemfile  README.md  _config.yml  event.md  get_started.md  glossary.md  index.md  pipelines.md  text_pipeline.md
extract/: pyproject.toml
extract/src/: logging.ini  run.py
extract/src/extract/: extractor.py
extract/src/extract/api/: config.py  router.py
extract/src/extract/db/: core.py  crud.py  models.py  schemas.py
extract/src/extract/sources/: emm.py
extract/src/test/test_api/: test_api.py
extraction_api/: README.md  pyproject.toml
extraction_api/src/: entrypoint.sh  main.py
extraction_api/src/api/: producer.py  routes.py
extraction_api/src/core/: api.py  models.py  producer.py  tasks.py
extraction_api/src/core/sources/: emm.py
extraction_api/src/test/: test_models.py
extraction_api/src/test/test_sources/: test_emm.py
pipeline/: build.sh
pipeline/extraction_api/: Dockerfile  dockerize.sh  pyproject.toml
pipeline/extraction_api/src/: main.py
pipeline/extraction_api/src/api/: models.py  producer.py  routes.py  worker.py
pipeline/extraction_api/src/api/sources/: emm.py
pipeline/extraction_api/src/test/: test_models.py
pipeline/extraction_api/src/test/test_sources/: test_emm.py
pipeline/extractors/: Dockerfile  README.md  dockerize.sh  pyproject.toml
pipeline/extractors/src/: main.py  run.py
pipeline/extractors/src/app/: broker.py  events.py  jobs.py
pipeline/extractors/src/app/sources/: emm.py
pipeline/extractors/src/test/test_sources/: test_emm.py
pipeline/transformers/: README.md
pipeline/transformers/text_annotator/: .dockerignore  Dockerfile  README.md  dockerize.sh  pyproject.toml
pipeline/transformers/text_annotator/src/: entrypoint.sh  logging.ini  main.py
pipeline/transformers/text_annotator/src/app/: annotator.py  broker.py  cleaner.py
pipeline/transformers/text_annotator/src/app/models/: impacts.h5
pipeline/transformers/text_annotator/src/core/: annotator.py  model.py
pipeline/transformers/text_annotator/src/core/models/: floods.h5
pipeline/transformers/text_annotator/src/test/: test_consumer.py
pipeline/transformers/text_geocoder/: .dockerignore  Dockerfile  dockerize.sh  pyproject.toml
pipeline/transformers/text_geocoder/src/: entrypoint.sh  main.py
pipeline/transformers/text_geocoder/src/app/: broker.py  gazetteer.py  geocoder.py  tags.py
pipeline/transformers/text_geocoder/src/core/: config.py  gazetteer.py  geocoder.py
pipeline/transformers/text_geocoder/src/test/: test_consumer.py  test_gazetteer.py  test_tags.py
services/: README.md
services/extraction_api/: pyproject.toml
services/extraction_api/src/: main.py
services/extraction_api/src/api/: config.py  database.py  models.py  router.py
services/extraction_api/src/test/: test_database.py  test_models.py  test_router.py
services/extraction_worker/: pyproject.toml
services/extraction_worker/src/: main.py
services/extraction_worker/src/test/test_sources/: test_emm.py
services/extraction_worker/src/worker/: config.py  database.py  logging.ini  models.py
services/extraction_worker/src/worker/sources/: emm.py
services/text_annotation/: pyproject.toml
services/text_annotation/src/: entrypoint.sh  main.py
services/text_annotation/src/annotation/: cleaner.py  config.py  models.py
services/text_annotation/src/test/: test_main.py
services/text_annotation/src/test/test_annotation/: test_cleaner.py
services/text_geocode/: .dockerignore  README.md  pyproject.toml
services/text_geocode/src/: entrypoint.sh  main.py
services/text_geocode/src/geocode/: config.py  gazetteer.py  models.py  tags.py
services/text_geocode/src/test/: test_gazetteer.py  test_tags.py
transformers/text_annotator/: pyproject.toml
transformers/text_annotator/src/: consumer.py  entrypoint.sh  main.py  producer.py
transformers/text_annotator/src/test/: test_consumer.py
transformers/text_geocoder/: pyproject.toml
transformers/text_geocoder/src/: consumer.py  main.py  producer.py
transformers/text_geocoder/src/core/: config.py  gazetteer.py  model.py  tags.py
transformers/text_geocoder/src/test/: test_consumer.py
