[tool.poetry]
name = "extraction"
version = "0.1.0"
description = "SMDRM Data Extraction"
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]

[tool.poetry.dependencies]
fastapi = "*"
httpx = "^0.24.1"
pandas = "*"
pydantic = "*"
pytest = "^7.0.0"
python = "~3.10"
redis = "*"
requests = "*"
sqlalchemy = "^2.0"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
