[tool.poetry]
name = "extraction-api"
version = "0.1.0"
description = "Publishes extraction and data point events in a distributed event log."
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]

[tool.poetry.dependencies]
confluent-kafka = "^2.5.3"
flask = "^3.0.3"
pandas = "^2.2.2"
pydantic = "^2.9.1"
pytest = "^7.0.0"
python = "~3.10"
pyuwsgi = "^2.0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
