[tool.poetry]
name = "extractors"
description = "Fetch events from data sources to a distributed event log."
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]
package-mode = false

[tool.poetry.dependencies]
confluent-kafka = "^2.5.3"
pytest = "^7.0.0"
python = "^3.10"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
