[tool.poetry]
name = "extraction-restapi"
version = "0.1.0"
description = "Creates extraction requests in a database."
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]

[tool.poetry.dependencies]
fastapi = "^0.114.1"
httpx = "^0.24.1"
pydantic = "^2.9.1"
pytest = "^7.0.0"
python = "~3.10"
requests = "^2.32.3"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
