[tool.poetry]
name = "extraction-worker"
version = "0.1.0"
description = "Run extractions fetched every 10 seconds from a database"
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]

[tool.poetry.dependencies]
pandas = "*"
pytest = "^7.0.0"
python = "~3.10"
redis = "*"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
