[tool.poetry]
name = "text_geocode"
version = "0.1.0"
description = "NLP geocoder"
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
deeppavlov = "1.4.0"
fastapi = "*"
httpx = "^0.24.1"
pytest = "^7.0.0"
python = "~3.10"
torch = {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
