[tool.poetry]
name = "text_annotator"
version = "0.1.0"
description = "Consumes and publishes NLP annotations."
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
confluent-kafka = "^2.5.3"
laserembeddings = "1.1.2"
keras = "~2.10"
pytest = "^7.0.0"
python = "~3.10"
tensorflow = "~2.10"
torch = {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
