[tool.poetry]
name = "text_geocoder"
version = "0.1.0"
description = "Consumes and publishes NLP geocodes."
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
confluent-kafka = "^2.5.3"
deeppavlov = "1.4.0"
pytest = "^7.0.0"
python = "~3.10"
torch = {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
