[tool.poetry]
name = "text_geocoder"
authors = ["Panizem <Emanuele.PANIZIO@ext.ec.europa.eu>"]
description = "Consumes and publishes NLP geocodes."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
confluent-kafka = "^2.5.3"
deeppavlov = "1.4.0"
pytest = "^7.0.0"
python = ">=3.10,<3.12"
torch = {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
